fixed css in inputs

--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -1,84 +1,84 @@
-.primary,
-.secondary {
-  cursor: pointer;
-  font-family: "Open Sans", sans-serif;
-  font-size: 18px;
-  line-height: 22px;
-  border-radius: 8px;
-  padding: 15px 29px;
-  text-align: center;
-  display: inline-block;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 22px;
-  text-align: center;
-  letter-spacing: -0.4px;
-}
-
-.primary {
-  background: #f36d03;
-  color: white;
-
-  a {
-    color: white;
-  }
-
-  a:hover {
-    text-decoration: none;
-  }
-
-  &:hover {
-    background: #f05600;
-  }
-}
-
-.secondary {
-  background: white;
-  border: 2px solid #adb2ba;
-  color: black;
-
-  &:hover {
-    background: lightgrey;
-  }
-}
-
-.actions {
-  input {
-    width: 296px;
-    height: 50px;
-    border: none;
-    color: white;
-    background: #f36d03;
-    border-radius: 8px;
-    cursor: pointer;
-  }
-}
-
-a.apply {
-  display: block;
-  padding: 14px;
-  width: 296px;
-  border: none;
-  color: white;
-  background: #f36d03;
-  border-radius: 8px;
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 22px;
-  text-align: center;
-  letter-spacing: -0.4px;
-}
-
-.tertiary a {
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 26px;
-  letter-spacing: -0.3px;
-  color: #adb2ba;
-
-  &:hover {
-    text-decoration: none;
-    color: #3e4462;
-  }
-}
+  // .primary,
+  // .secondary {
+  //   cursor: pointer;
+  //   font-family: "Open Sans", sans-serif;
+  //   font-size: 18px;
+  //   line-height: 22px;
+  //   border-radius: 8px;
+  //   padding: 15px 29px;
+  //   text-align: center;
+  //   display: inline-block;
+  //   font-weight: normal;
+  //   font-size: 16px;
+  //   line-height: 22px;
+  //   text-align: center;
+  //   letter-spacing: -0.4px;
+  // }
+  //
+  // .primary {
+  //   background: #f36d03;
+  //   color: white;
+  //
+  //   a {
+  //     color: white;
+  //   }
+  //
+  //   a:hover {
+  //     text-decoration: none;
+  //   }
+  //
+  //   &:hover {
+  //     background: #f05600;
+  //   }
+  // }
+  //
+  // .secondary {
+  //   background: white;
+  //   border: 2px solid #adb2ba;
+  //   color: black;
+  //
+  //   &:hover {
+  //     background: lightgrey;
+  //   }
+  // }
+  //
+  // .actions {
+  //   input {
+  //     width: 296px;
+  //     height: 50px;
+  //     border: none;
+  //     color: white;
+  //     background: #f36d03;
+  //     border-radius: 8px;
+  //     cursor: pointer;
+  //   }
+  // }
+  //
+  // a.apply {
+  //   display: block;
+  //   padding: 14px;
+  //   width: 296px;
+  //   border: none;
+  //   color: white;
+  //   background: #f36d03;
+  //   border-radius: 8px;
+  //   font-weight: normal;
+  //   font-size: 18px;
+  //   line-height: 22px;
+  //   text-align: center;
+  //   letter-spacing: -0.4px;
+  // }
+  //
+  // .tertiary a {
+  //   font-style: normal;
+  //   font-weight: normal;
+  //   font-size: 16px;
+  //   line-height: 26px;
+  //   letter-spacing: -0.3px;
+  //   color: #adb2ba;
+  //
+  //   &:hover {
+  //     text-decoration: none;
+  //     color: #3e4462;
+  //   }
+  // }
