--- a/app/assets/stylesheets/icons.scss
+++ b/app/assets/stylesheets/icons.scss
@@ -1,9 +1,9 @@
-@mixin icon_sq($url, $size) {
+@mixin icon($url, $size) {
   background: url($url) no-repeat center;
   width: $size;
   height: $size;
 }
 
-.flat_arrow { @include icon_sq("icons/flat_arrow_icon.svg", 32px); }
-.plus { @include icon_sq("icons/plus.svg", 24px); }
-.minus { @include icon_sq("icons/minus.svg", 24px); }
+.flat_arrow { @include icon("icons/flat_arrow_icon.svg", 32px); }
+.plus { @include icon("icons/plus.svg", 24px); }
+.minus { @include icon("icons/minus.svg", 24px); }
