--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -14,10 +14,10 @@ html
       .menu_items_left
         = link_to '', flats_path, class: 'logo menu_item'
 
-        a.menu_item
+        a
           = link_to 'Поиск', flats_path
 
-        a.menu_item Уведомления
+        </%= a Уведомления >
 
         - if current_user&.flats.present?
           = link_to 'Чаты', flat_conversations_path(current_user.flats.first), class: 'menu_item'
