--- a/app/assets/stylesheets/atoms.scss
+++ b/app/assets/stylesheets/atoms.scss
@@ -14,6 +14,7 @@
   width: fit-content;
   text-align: center;
   border: none;
+  outline: 0;
   &:disabled {
     opacity: 0.56;
   }
@@ -45,15 +46,15 @@
   @include s_button_font;
 }
 
-.primary {
+.primary_button {
   @include button_colors($primary, $white, $dark_primary);
 }
 
-.primary_grey {
+.secondary_button {
   @include button_colors($grey1, $neutral, $grey2);
 }
 
-.flat {
+.flat_button {
   @include button_colors(none, $primary, none);
   &:hover {
     color: $dark_primary;
@@ -105,7 +106,7 @@
   }
 
   &:hover {
-    color: $primary;
+    color: $dark;
     cursor: pointer;
   }
 }
