--- a/app/assets/stylesheets/menubar.scss
+++ b/app/assets/stylesheets/menubar.scss
@@ -1,16 +1,21 @@
+@import "colors";
+@import "fonts";
+
 .menubar {
+  position: sticky;
+  top:0px;
   width: 100%;
   height: 64px;
-  color: #fff;
   background-color: white;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   padding-top: 12px;
+  font-size: 18px;
 
-  // position: sticky;
-  // top:0;
+  //Вот это гранд-костыль
+
   .logo {
     display: block;
     background-image: url("logo.svg");
@@ -30,7 +35,6 @@
     flex-direction: row;
   }
 
-  .icons,
   .menu_items_right {
     display: flex;
   }
@@ -46,11 +50,11 @@
     }
   }
 
-  .icons {
-    margin-right: 160px;
-
-    a {
-      margin-left: 16px;
-    }
-  }
+  // .icons {
+  //   margin-right: 160px;
+  //
+  //   a {
+  //     margin-left: 16px;
+  //   }
+  // }
 }
