--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,4 +1,48 @@
-.ava_name
-  = image_tag(@user.avatar)
-  .user_info
-    h3 Мария Кондратенко
+.person
+  .profile_info
+    .ava_name
+      = image_tag(@user.avatar)
+      .user_info
+        h3
+          =fullname(@user)
+        .p2
+         = sex_age(@user)
+
+    .badges
+      .m_badge.primary_badge Курит
+      .m_badge.primary_badge Есть домашнее животное
+
+    .p2
+      | Работаю дизайнером в своей веб-студии, дома бываю нечасто, в основном чтобы переночевать. Гостей парней и прочую живность не вожу. Живу с лысым котом, к лотку приучен, из комнаты не выходиит. Вообще я могу много чего о себе написать, например, ка кпочти научилась укладываться в дедлайны. Это особое умение, и я готова поделитсья им с миром.
+    h5
+      | Фото
+
+      .photos
+        .photo
+        .photo
+        .photo
+        .photo
+        .photo
+        .photo
+
+    h5
+      | Cоциальные сети
+    .social_icons
+      .vk
+      .facebook
+      .instagram
+
+  .flat_card
+    h5 Комната для тусовщика
+    .main_photo
+    .small_photos
+      .photo
+      .photo
+      .photo
+      .photo
+    .p2
+      | 15 000 ₽ в месяц
+    .p4
+      | Сдается комната. Без комиссии. Метро ВДНХ 10-12 минут, раcстояние - 1км если ходит по прямой, как ходят все люди микрорайона, 1,3 км это если по автодорогам. Для одной девушки или одного парня, можно студентам.
+    .p4
+      | Сокол
