--- a/app/assets/stylesheets/icons.scss
+++ b/app/assets/stylesheets/icons.scss
@@ -4,6 +4,9 @@
   height: $size;
 }
 
-.flat_arrow { @include icon("icons/flat_arrow_icon.svg", 32px); }
+.flat_arrow { @include icon("icons/flat_arrow.svg", 32px); }
 .plus { @include icon("icons/plus.svg", 24px); }
 .minus { @include icon("icons/minus.svg", 24px); }
+.vk { @include icon("icons/vk.svg", 24px); }
+.facebook { @include icon("icons/facebook.svg", 24px); }
+.instagram { @include icon("icons/instagram.svg", 24px); }
