--- a/app/assets/stylesheets/icons.scss
+++ b/app/assets/stylesheets/icons.scss
@@ -7,3 +7,5 @@
 .flat_arrow { @include icon("icons/flat_arrow_icon.svg", 32px); }
 .plus { @include icon("icons/plus.svg", 24px); }
 .minus { @include icon("icons/minus.svg", 24px); }
+.avatar { @include icon("icons/avatar.svg", 24px); }
+.photos { @include icon("icons/photos.svg", 24px); }
