--- a/app/assets/stylesheets/components.scss
+++ b/app/assets/stylesheets/components.scss
@@ -50,7 +50,6 @@
   }
 }
 
-
 // Radio Button
 
 .box_label_container {
@@ -63,5 +62,28 @@
 
   label {
     @include box_label;
+  }
+}
+
+// Step bar
+
+.step_bar {
+  display: flex;
+
+  .step {
+    text-align: center;
+    @include p4;
+    line-height: 24px;
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+    color: $white;
+    background-color: $primary;
+    opacity: 0.56;
+    margin-right: 20px;
+
+    &.active {
+      opacity: 1;
+    }
   }
 }
