--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,7 +1,7 @@
 .register
   h1
     | Регистрация
-  = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+  = form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: 'sign_in_form'}) do |f|
     = render "devise/shared/error_messages", resource: resource
 
     .field
