--- a/app/assets/stylesheets/test.scss
+++ b/app/assets/stylesheets/test.scss
@@ -1,10 +1,3 @@
-#chat-box {
-  padding: 6px 0;
-  height: 600px;
-  overflow-y: auto;
-  margin: 20px 0;
-}
-
 .modal {
   position: fixed;
   top: 0;
@@ -12,22 +5,5 @@
   width:100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.6);
-}
-
-.modal-main {
-  position:fixed;
-  background: white;
-  width: 80%;
-  height: auto;
-  top:50%;
-  left:50%;
-  transform: translate(-50%,-50%);
-}
-
-.display-block {
-  display: block;
-}
-
-.display-none {
-  display: none;
+  z-index: 99999;
 }
