--- a/app/assets/stylesheets/icons.scss
+++ b/app/assets/stylesheets/icons.scss
@@ -12,3 +12,4 @@
 .instagram { @include icon("icons/instagram.svg", 24px); }
 .avatar { @include icon("icons/avatar.svg", 24px); }
 .photos { @include icon("icons/photos.svg", 24px); }
+.arrow_down { @include icon("icons/arrow_down.svg", 36px); }
